--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+server.port=8081
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3307/ecommerce
+spring.datasource.username=root
+spring.datasource.password=1234
+
+spring.jpa.hibernate.ddl-auto=update
+#dialecto de uso
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#para que se muestren sequencias sql
+spring.jpa.show-sql=true
+#para que se muestre el formato jpa
+spring.jpa.properties.hibernate.format_sql=true
+
+#estrategia de hibernate
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
